feat(Result): Return a JSON Output
