# gen/http/openapi3.yaml
@@ -28,9 +28,10 @@ paths:
                     content:
                         application/json:
                             schema:
-                                type: string
-                                example: Est alias harum ut quis quod totam.
-                            example: Iste numquam veritatis aut quas.
+                                $ref: '#/components/schemas/StatusResult'
+                            example:
+                                status:
+                                    token: Molestias quam quos velit rerum.
 components:
     schemas:
         ExchangeTokenRequestBody:
@@ -39,19 +40,41 @@ components:
                 jwt:
                     type: string
                     description: The JWT Token from the impersonating service account
-                    example: Fugiat incidunt omnis mollitia fugit architecto qui.
+                    example: Molestiae animi ab.
                 namespace:
                     type: string
                     description: The target namespace for impersonation
-                    example: Molestiae animi ab.
+                    example: Officia expedita magnam et enim.
                 serviceAccountName:
                     type: string
                     description: The target serviceAccount
-                    example: Officia expedita magnam et enim.
+                    example: Maiores unde.
             example:
-                jwt: Maiores unde.
-                namespace: Qui voluptas ad quis sit voluptates tempora.
-                serviceAccountName: Molestiae ad error voluptas.
+                jwt: Qui voluptas ad quis sit voluptates tempora.
+                namespace: Molestiae ad error voluptas.
+                serviceAccountName: Est alias harum ut quis quod totam.
+        Status:
+            type: object
+            properties:
+                token:
+                    type: string
+                    description: The status token
+                    example: Iste numquam veritatis aut quas.
+            description: Status with a token.
+            example:
+                token: Laudantium corporis.
+            required:
+                - token
+        StatusResult:
+            type: object
+            properties:
+                status:
+                    $ref: '#/components/schemas/Status'
+            example:
+                status:
+                    token: Molestias quam quos velit rerum.
+            required:
+                - status
 tags:
     - name: tokenExchange
       description: Exchange an incoming Kubernetes Token for Another Kubernetes Token
